# rs_school_capstone_project

./: README.md  noxfile.py  pyproject.toml
.github/workflows/: github_action.yml
src/forest_cover_type_prediction/: data.py  pipeline.py  train.py
tests/: test_train.py
