[tool.poetry]
name = "forest_cover"
version = "0.1.0"
description = "Capstone project for RS School Machine Learning course"
authors = ["mlukas <mikhail.n.lukashevich@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
train = "forest_cover_type_prediction.train:train"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
pandas = "^1.4.2"
sklearn = "^0.0"
scikit-learn = "^1.0.2"
mlflow = "^1.25.1"

[tool.poetry.dev-dependencies]
mypy = "^0.950"
black = "^22.3.0"
nox = "^2022.1.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
